static/style.css
body {
    background: #CAECE9;
    font-family: 'Trebuchet MS', sans-serif;
    font-size: 14px;
}

a {
    color: #26776F;
    text-decoration: none;
}

a:hover {
    color: #333;
    text-decoration: underline;
}

a:focus, a:active { outline: 0 }

.rtl { direction:rtl }

.wrong { color:red }

.hilite { background:#ffff7f !important }

input[type="text"],
input[type="password"] {
    background: white;
    border: 1px solid #BFE6E2;
    padding: 2px;
    margin:0 2px;
    font-family: 'Trebuchet MS', sans-serif;
    font-size: 14px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    color: #105157;
}

a.internal-link, button {
    background: #105157;
    border: 1px solid #073B36;
    padding: 1px 3px;
    margin:0 2px;
    font-family: 'Trebuchet MS', sans-serif;
    font-size: 14px;
    font-weight: bold;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    color: white !important;
}

button { font-family: Courier New }

a.internal-link:hover, button:hover {
    background: #20A2AE;
}


form.login-menu { float:right; margin-left:4px; line-height:36px }
form.inline-form,form.inline-with-labels { display:inline; line-height:36px }
form.inline-form { padding-left:4px; border-left: groove 2px; }
.rtl form.inline-form { padding-right:4px; border-right: groove 2px; border-left:none }
.node-title, .entry-title { padding:0 4px; font-weight:bold; border-left: groove 2px }
.guest-user .node-title { border:none }
.rtl .node-title, .rtl .entry-title { border-right: groove 2px; border-left:none }
.noborder { border:none !important }
form.inline-form label { display:none }
form td { text-align:left; vertical-align:top }
form th { text-align:right; vertical-align:top }

.hide-feed .entry-title {border:none}
.hide-feed .feed-reference {display: none}

div.page {
    background: white;
    border: 1px solid #6EC4CC;
    width: 700px;
    margin: 50px auto;
}

div.page h1 {
    background: #6EC4CC;
    margin: 0;
    padding: 10px 14px 4px;
    color: white;
    letter-spacing: 1px;
    text-shadow: 0 0 3px #24776F;
    font-weight: normal;
}

div.page-description {
    background: #6EC4CC;
    padding: 0 14px 8px;
    font-weight: bold;
    text-shadow: 0 0 2px #ffffff;
}

div.navigation {
    position:fixed;
    z-index:23;
    top:0;
    background: #f0f0f0;
    padding: 4px 10px;
    background: 
    color: #888;
    font-size: 12px;
    letter-spacing: 0.5px;
    line-height: 24px;
    width: 678px;
    margin: 0 auto;
    border: 1px solid black;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

div.navigation a {
    color: #444;
    font-weight: bold;
}

div.page h2 {
    margin: 0;
    color: #105157;
    text-shadow: 0 1px 2px #ccc;
}

div.page div.body {
    padding: 10px;
}

div.page div.footer {
    background: #eee;
    color: #888;
    padding: 5px 10px;
    font-size: 12px;
}

div.page ul.messages {
    list-style: none;
    background:#F0F0F0;
    margin: 0;
    padding: 4px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    min-height:30px;
    clear:both;
}

#loading-list {
    list-style: none;
    margin: 0;
    padding: 4px;
}

#loading-div {
    position:fixed;
    z-index:23;
    top:0;
    left:0;
    width:145px;
    padding: 4px 0 0;
    margin:0;
    background:#F0F0F0;
    border: 1px solid #888;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

div.page ul.messages th, div.page ul.messages td {
    vertical-align:top;
}

div.page ul.messages li.feed-entry {
    position:relative; /* enable input.toggler position:absolute trickery */
    margin: 10px 0;
    clear: both;
    padding: 10px 5px 5px;
    background: white;
    border: 1px solid #7f7f7f;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

#loading-list li {
    position:relative; /* enable input.toggler position:absolute trickery */
    margin: 5px 0;
    padding: 5px;
    overflow: hidden;
    background: white;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

div.page ul.flock {
    list-style: none;
    margin: 8px 16px 0;
    padding: 0;
    background:#F0F0F0;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

div.page ul.flock li {
    position:relative; /* enable input.toggler position:absolute trickery */
    margin: 0 0 4px 20px;
    padding: 10px 5px 5px;
}

.mute .node-title { background:#CFCFCF; padding:1px 4px }
.node-title.mute { background:#AFAFAF; padding:1px 4px }

div.clipboard {
    background: white;
    border: solid black 1px;
    padding:4px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

div.page div.clipboard ul.flock { background:none }

#clipboard { font-size:1.25em; font-weight:bold }

div.page .toggler-label {
    background: #D0DAF9;
    padding:10px 8px 8px 24px;
    border: none;
    line-height:36px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

/* expand/collapse toggler checkbox. Inspired by http://www.thecssninja.com/css/css-tree-menu */
input.toggler {
    position:absolute;
    top:17px; left:6px;
}

ul.messages input.toggler { top:28px }

.node-details input.toggler { top:8px; left:4px }

span.toggler-label {
    padding-left:20px
}

input.toggler + div {
    height: 0;
    overflow: hidden;
}

input.toggler:checked + div {
    height: auto;
    overflow: visible;
}

div.page ul.messages p {
    margin: 0;
}

div.page ul.messages li img {
    border: none;
    padding: 0 10px 0 0;
}

div.page ul.messages li small, .item-time {
    font-size: 0.9em;
    color: #888;
}

div.item-time {
    direction:ltr !important;
    float:right;
    margin:0px 2px;
}

div.node-details {
    position:relative; /* enable input.toggler position:absolute trickery */
    line-height:36px;
    margin-bottom: 4px }

div.page div.node-details span.inline-toggler { float:left; line-height:1em; margin:4px }

.feed-reference { font-size: 0.9em; }

.site-reference { font-size: 1.5em; font-face:bold }

a.site-reference, a.feed-reference { text-decoration: underline; }

.entry-title {
    font-weight:bold
}

.entry-description {
    margin-top:12px;
}

ul.flashes {
    position:fixed;
    top:50px;
    z-index:23;
    margin:0 auto;
    list-style: none;
    padding: 0;
}

ul.flashes li {
    background: #FFC;
    border: 1px solid #81CEC6;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    margin-top:4px;
    padding: 4px;
    font-size: 13px;
}

div.error {
    margin: 10px 0;
    background: #FAE4E4;
    border: 1px solid #DD6F6F;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    padding: 4px;
    font-size: 13px;
}

.important, a.important {
    font-size:125%;
    background:#F00 !important;
    color:#FFF !important;
    text-shadow: 2px 2px 4px black !important;
}

